lorm 0.2.2 2016-8-20

[FIX]   QuerySet.filter(xxx__in=[]) crushed when list is empty
[FIX]   execute_many returns affected row count.


lorm 0.2.1 2016-8-20

[FIX]   default: autoreconnect=False


lorm 0.2.0 2016-8-20

[NEW]   new mysql engine: pymysql
[NEW]   add callproc
[NEW]   threading safe
[NEW]   add MysqlPool
[NEW]   add test scripts

[FIX]   disorder in make_query
[FIX]   modify escape and literal to support charset 


lorm 0.1.13 2016-8-18

[FIX]   Struct arguments is more generic.


lorm 0.1.12 2016-8-18

[NEW]   add QuerySet.exists method
[NEW]   add QuerySet.__bool__ method
[NEW]   add QuerySet.__nonzero__ method

[FIX]   fix escape encode issue